corrections of navigation and spacing

--- a/assets/css/color-theme-blue.css
+++ b/assets/css/color-theme-blue.css
@@ -3,7 +3,7 @@
  * @Date:   Thursday, June 16th 2022, 6:49:10 pm
  * @Filename: color-themes.css
  * @Last modified by:
- * @Last modified time: Friday, August 5th 2022, 6:47:29 pm
+ * @Last modified time: Saturday, August 6th 2022, 3:44:27 pm
  */
 
  /*done up to line 1980*/
@@ -22,8 +22,9 @@
 
 
     --color-action-primary:   #3370cc; /* #1f4e93 #0047b3 #272778 z.B. button, focus in form, links etc.;#3f8cb4  #204578 rgba(79, 127, 248, 1); */
-    --color-action-lighter: #0066ff;    /*#6c94f9 pagination */
-    --color-action-darker: #3b70f7;    /* pagination */
+    --color-action-lighter: #477ed1;    /* #0066ff #6c94f9 pagination */
+    --color-action-light: #99b7e5; /*or #85a9e0*/
+    --color-action-darker: #2859a3;  /* or #2d64b7; old: #3b70f7  pagination */
 
     --color-action-hover: rgba(51, 112, 204, 0.05); /* rgba(245, 106, 106, 0.05) button hover - lighter version of primary action color (most alpha) */
     --color-action-active: rgba(51, 112, 204, 0.15); /*  rgba(245, 106, 106, 0.15) button active - lighter version of primary action color (more alpha) */
